# nn-location-checker-mini

./: .gitignore  README.md  pyproject.toml  train_config.toml
.github/workflows/: codestyle.yml  unit_test.yml
classifiers/: alexnet_classifier.json
configs/: densenet121.toml  densenet161.toml  densenet169.toml  densenet201.toml  googlenet.toml  inception_v3.toml  mnasnet_0_5.toml  mnasnet_0_75.toml  mnasnet_1_0.toml  mnasnet_1_3.toml  mobilenet_v2.toml  mobilenet_v3_l.toml  mobilenet_v3_s.toml  resnet101.toml  resnet152.toml  resnext_101_32.toml  resnext_101_64.toml  resnext_50.toml  shufflenet_v2_0_5.toml  shufflenet_v2_1_0.toml  shufflenet_v2_1_5.toml  shufflenet_v2_2_0.toml  squeezenet1_0.toml  squeezenet1_1.toml  wide_resnet101_2.toml  wide_resnet50_2.toml
json_modules/: alexnet_classifier.json
samples/: README.md  benchmark_models.py  main.py  plot_benchmark.py  retest.py  run_experiment.py  show_dataset.py  show_transformation.py  train_model.py
src/: build_cnn.py  classification_network.py  classifier.py  dataset.py  experiment.py  json_loader.py  logger.py  metrics.py  model_register.py  model_segment.py  tensor_shape.py  training_config.py  utils.py
tests/: classifier_test.py  convolution_test.py  experiment_test.py  json_loader_test.py  metrics_test.py  model_segment_test.py  training_config_test.py
