[project]
name = "nn-location-checker-mini"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.8",
  "opencv-python>=4.13.0.92",
  "torch>=2.10.0",
  "torchinfo>=1.8.0",
  "torchvision>=0.25.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.ruff.lint]
select = [
  "N",
  "UP",
  "E",
  "F",
  "I",
  "G",
] # "D" for docstrings. It's useless for current state
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"samples/*.py" = ["E402"]
"tests/*.py" = ["E402"]

[tool.basedpyright]
include = ["src", "samples"]
extraPaths = ["src"]
